test/Fail/Issue8144Data.err
Issue8144Data.agda:6.8-9: error: [NoSuchModule]
No module D in scope---but a data type of that name is in scope
whose data module is either not defined yet or hidden
when scope checking the declaration
  open D
